--- a/src/front/styles/news.css
+++ b/src/front/styles/news.css
@@ -1,15 +1,15 @@
-.single-news-img {
+/* .single-news-img {
   object-fit: cover;
   padding-top: 9px;
   width: 500px;
   height: 400px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-}
-.news-body-container {
+} */
+/* .news-body-container {
   width: 600px;
   background-color: none;
-}
-.singlenews-bdy {
+} */
+/* .singlenews-bdy {
   width: 400px;
   margin-left: 10px;
   margin-right: 10px;
@@ -18,26 +18,58 @@
   background: none;
   color: black;
   text-align: justify;
-}
-.singlenews-title {
+} */
+/* .singlenews-title {
   margin-bottom: 40px;
   margin-right: 5px;
   padding-left: 100px;
-}
-.news-box {
+} */
+/* .news-box {
   width: 1400px;
   height: 1200px;
   flex-wrap: wrap;
   gap: 4px 4px;
   padding-bottom: 400px;
   justify-content: center;
-}
-.all-News-container {
-  height: 3500px;
+} */
+/* .all-News-container {
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  margin-bottom: 200px;
+} */
+
+/*Headers of the several pages*/
+
+.second-title h1{
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  font-size: 50px;
+  /* text-shadow: 0px 0px 5px #d39393, 0px 0px 10px #b393d3, 0px 0px 10px #b393d3, 0px 0px 20px #b393d3; */
+  color: transparent;
+  background-image: radial-gradient(circle, #ffdd12, #e7eff6, #00dfff, #e7eff6, #00ffab, #e7eff6, #fb73cc, #ffdd12);
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-size: 200%;
+  background-position: -200%;
+  animation: animated-gradient 3s infinite alternate-reverse, tracking-in-expand 2.5s cubic-bezier(0.215, 0.610, 0.355, 1.000) 0.5s alternate both;
+}
+@keyframes animated-gradient {
+  to{
+    background-position: 50%;
+  }
+}
+@keyframes tracking-in-expand {
+  0% {
+    letter-spacing: -0.5em;
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
 }
